--- a/TDDDaoTestDay01/pom.xml
+++ b/TDDDaoTestDay01/pom.xml
@@ -20,6 +20,18 @@
             <artifactId>mockito-all</artifactId>
             <version>1.8.4</version>
         </dependency>
+        <!--dbunit-->
+        <dependency>
+            <groupId>org.dbunit</groupId>
+            <artifactId>dbunit</artifactId>
+            <version>2.4.9</version>
+        </dependency>
+        <!--h2 database-->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.3.172</version>
+        </dependency>
 
     </dependencies>
 
